<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/notas"
            android:title="@string/menu_mis_notas" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/crear_nota"
            android:title="@string/menu_crear_nota" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/editar_nota"
            android:title="@string/menu_editar_nota" />
        <item
            android:id="@+id/nav_eliminar"
            android:icon="@drawable/delete"
            android:title="@string/menu_eliminar" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/acerca_de"
            android:title="@string/menu_acerca_de" />
    </group>

</menu>
